Fixed the alignment with the layout

--- a/styles/blocks/content/content.css
+++ b/styles/blocks/content/content.css
@@ -14,25 +14,32 @@
 .content__article-section {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
 
-@media (width > 768px) {
+.content__article-section.inner-section {
+    margin-block-start: 10px;
+}
+
+@media (width >= 768px) {
     .content__article:nth-child(2n - 1) {
         grid-template-columns: 1fr 2fr;
-    }
-
-    .content__article:nth-child(2n) > .content__article-title {
-        inline-size: min-content;
     }
 
     .content__article:nth-child(2n - 1) .content__article-section {
         grid-column: 2;
     }
 
+    .content__article:nth-child(2n) > .content__article-title {
+        inline-size: min-content;
+    }
 }
 
-@media (width > 1024px) {
+@media (width >= 1024px) {
+    .content__article:nth-child(2n - 1) {
+        column-gap: 12px;
+    }
+    
     .content__article:nth-child(2n) {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: min-content 1fr;
@@ -40,5 +47,9 @@
 
     .content__article:nth-child(2n) .content__article-section {
         grid-row: 2;
+    }
+
+    .content__article:nth-child(2n) > .content__article-title {
+        inline-size: initial;
     }
 }
