--- a/styles/blocks/content/gallery.css
+++ b/styles/blocks/content/gallery.css
@@ -17,10 +17,10 @@
     object-fit: cover;
 }
 
-@media (width > 768px) {
+@media (width >= 768px) {
     .content__article_gallery-section {
         grid-template-columns: 1fr minmax(min-content, 1fr) 1fr;
-        grid-template-rows: 1fr min-content 1fr;
+        grid-template-rows: min-content min-content 1fr;
         grid-auto-flow: dense;
     }
     
