--- a/styles/blocks/header/header.css
+++ b/styles/blocks/header/header.css
@@ -1,10 +1,10 @@
 .header {
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: 1fr min-content 1fr;
     align-items: center;
     position: relative;
-    margin: var(--layout-padding);
-    height: calc(100dvh - 2 * var(--layout-padding));
+    padding: var(--layout-padding);
+    height: 100dvh;
 }
 
 .header__theme-menu {
@@ -48,9 +48,9 @@
     pointer-events: none;
 }
 
-@media (width > 768px) {
+@media (width >= 768px) {
     .header {
-        grid-template: repeat(3, 1fr) / repeat(2, 1fr);
+        grid-template: 1fr min-content 1fr / repeat(2, 1fr);
     }
 
     .header__theme-menu {
@@ -59,6 +59,7 @@
 
     .header__heading {
         grid-column: 1 / span 2;
+        margin-inline-start: calc(var(--layout-padding) * -1);
     }
 
     .header__title {
@@ -66,7 +67,7 @@
     }
 }
 
-@media (width > 1024px) {
+@media (width >= 1024px) {
     .header__theme-menu {
         grid-column: 1 / span 2;
         justify-self: center;
